# orders-inventory

./: .gitignore  DEPLOYMENT.md  LOAD_TESTING_DEMO.md  Procfile  README.md  app.py  pyproject.toml  render.yaml  requirements-minimal.txt  requirements-render.txt  requirements-simple.txt  requirements.in  requirements.txt  run_api.py  screenshots.md  simple_main.py
docs/: ML_AI_ROADMAP.md  ML_MODELS_STRATEGY.md  RAG_AGENTIC_AI_STRATEGY.md  concurrency_analysis.md
images/diagrams/: README.md
images/screenshots/: README.md
load_tests/: README.md  __init__.py  locustfile.py  scenarios.py
resources/: __init__.py  sample_data.json
scripts/: deploy_to_render.sh  run_load_tests.sh
src/orders_inventory/: __init__.py  inventory.py
src/orders_inventory/api/: __init__.py  dependencies.py  exceptions.py  main.py  models.py  orders.py  products.py  simple_models.py
src/orders_inventory/models/: __init__.py  base.py  order.py  product.py
src/orders_inventory/repositories/: __init__.py  base_repository.py  order_repository.py  product_repository.py
src/orders_inventory/services/: __init__.py  concurrency_safe_service.py  inventory_service.py  order_service.py
tests/: __init__.py  conftest.py  test_concurrency.py  test_sample.py
tests/api/: test_orders_api.py  test_products_api.py
tests/models/: test_order.py  test_product.py
tests/repositories/: __init__.py  test_order_repository.py  test_product_repository.py
tests/services/: test_inventory_service.py  test_order_service.py
tests/utils/: test_database.py  test_validators.py
(+4 files in other folders)
