[tool.poetry]
name = "orders-inventory"
version = "0.1.0"
description = "A Python package for managing orders and inventory"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "orders_inventory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
